# drone_offboard

./: .gitignore  fastdds_profile.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/RL_research_workspace/src/f4_project/: COLCON_IGNORE  package.xml  pyproject.toml  setup.cfg  setup.py
src/RL_research_workspace/src/f4_project/f4_project/SAC/: main.py  model.py  pid.py  python_test.py  sac.py  test.py  train_env_disp_mem.py  train_env_disp_mem_PID.py
src/RL_research_workspace/src/f4_project/f4_project/SAC/checkpoints/: sac_rewards_GazeboIrisEnv-v0_laser_2d_new_200_400_Gaussian_21_10_2024_00_34.npy
src/RL_research_workspace/src/f4_project/f4_project/SAC/runs/laser_2d_new_200_400_Gaussian_18_10_2024_07_29/: events.out.tfevents.1729207756.anas-amer.5345.0
src/RL_research_workspace/src/f4_project/f4_project/TD3/: TD3.py  __init__.py  holonomic_360_lidar_env (1).py  holonomic_360_lidar_env.py  holonomic_lidar_env (1).py  main.py  pid.py  real_drone_env.py  test_td3.py  train_env_disp_mem.py  utils.py  visualizer.py
src/RL_research_workspace/src/f4_project/f4_project/TD3/models/: TD3_360_1236_actor.zip:Zone.Identifier  TD3_360_89123789_actor  normal_02_01_2026_23_19_actor
src/RL_research_workspace/src/f4_project/f4_project/TD3/transformer_TD3/: TD3.py  main.py  testing.py  train_env_disp_mem.py  train_env_disp_mem_PID.py  utils.py
src/RL_research_workspace/src/f4_project/urdf/: Tree.urdf  Tree_wider.urdf  goal.urdf  ring_obstacle.sdf  ring_obstacle.urdf
src/RL_research_workspace/src/f4_project/worlds/: empty.world  empty_sped_up.world
(+4188 files in other folders)
