[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f4_project"
version = "0.0.0"
description = "TODO: Package description"
license = {text = "TODO: License declaration"}
authors = [
    {name = "anas", email = "anas@todo.todo"},
]
dependencies = [
    "setuptools",
]
dynamic = ["maintainers"]
